--- a/index.html
+++ b/index.html
@@ -11,6 +11,27 @@
         </header>
 
         <main>
+            <form>
+                <input type="text" placeholder="Digite seu nome">
+                <input type="radio" name="jogo" value="velha"> Jogo da Velha
+                <input type="radio" name="jogo" value="sudoku"> Sudoku
+
+
+                <label for="nome">Nome:</label>
+                <input type="text" id="nome">
+
+
+                <button type="submit">Enviar</button>
+                <button type="button">Iniciar Jogo</button>
+
+
+                <textarea placeholder="Digite seu comentário"></textarea>
+
+            </form>
+              
+
+
+
             <section>
               <h2>Jogo da Velha</h2>
               <p>O jogo da velha e um classico dos jogos de estrategia. Desafie seus amigos e divirta-se!</p>
